--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,34 @@
+h1{
+    margin: 0 auto;
+}
+h2{
+    margin: 0 auto; 
+}
 
+.GEMS {
+    font-size: 100px;
+
+}
+.jumbotron{
+    background:rgb(185, 211, 185);
+    color:rgba(103, 49, 95, 0.598);
+    font-weight: 200;
+}
+body {
+
+position: relative;
+text-align: center;
+}
+
+container{
+    position: relative;
+    text-align: center;
+    color:rgba(103, 49, 95, 0.598);
+    font-weight: 50;
+}
+ img{
+  width: 100%;
+  height: auto;
+}
+
+  
