--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,3 +37,13 @@ container{
 .element.show{
     opacity:1;
 }
+#score{
+    color:palevioletred;
+
+}
+#wins{
+    color:palevioletred;
+}
+#losses{
+    color:palevioletred;
+}
