--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 h1{
     margin: 0 auto;
+ 
 }
 h2{
     margin: 0 auto; 
@@ -10,6 +11,7 @@ h2{
 
 }
 .jumbotron{
+    font-size: 60px;
     background: rgb(220, 255, 251) ;
     color:rgba(63, 34, 59, 0.598);
     font-weight: 200;
@@ -18,6 +20,7 @@ body {
 
 position: relative;
 text-align: center;
+
 }
 
 container{
@@ -31,14 +34,9 @@ container{
   height: auto;
 }
 
-.element{
-    opacity:0;
- }
-.element.show{
-    opacity:1;
-}
+
 #score{
-    font-size: 60px;
+    font-size: 50px;
     color:palevioletred;
     border-radius: 5px;
     border-bottom: solid 5px blueviolet;
@@ -52,4 +50,7 @@ container{
 }
 #ranNum {
     color: blueviolet;
+}
+#ranBox {
+    font-size:50px;
 }
